new record add attendance api
