# src/api.yaml
@@ -2566,3 +2566,48 @@ paths:
           '500':
             description: Server error.
   
+
+# get 
+  paths:
+  /api/attendance/new:
+  # add
+      post:
+        tags:
+          - Attendance
+        security:
+        - token: []
+        summary: Add new record      
+        post:
+        requestBody:
+          required: true
+          content:
+            # multipart/form-data:
+            application/json:
+              schema:
+                properties: 
+                  userId:       
+                    type: string
+                    example : ""
+                  timestamp:       
+                    type: Date
+                    example : ""
+                  time:       
+                    type: Array
+                    example : [{
+                      clock_in: "",
+                      clock_out: "",
+                    }]
+                required:
+                  -  userId
+                  -  timestamp
+                  -  time
+          
+        responses: 
+          '201':
+            description: created success. 
+          '400':
+            description: Bad Request.
+          '401':
+            description:  Unauthorized.
+          '500':
+            description: Server error.
